hphp/test/quick/ns_invalid_class.php.expectf
HipHop Fatal error: Class undefined: B in %s on line 4
